// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main when a non-default OIDC issuer is used successfully run main 1`] = `
{
  "buildDefinition": {
    "buildType": "https://actions.github.io/buildtypes/workflow/v1",
    "externalParameters": {
      "workflow": {
        "path": ".github/workflows/main.yml",
        "ref": "refs/heads/main",
        "repository": "https://example-01.ghe.com/owner/repo",
      },
    },
    "internalParameters": {
      "github": {
        "event_name": "push",
        "repository_id": "repo-id",
        "repository_owner_id": "owner-id",
        "runner_environment": "github-hosted",
      },
    },
    "resolvedDependencies": [
      {
        "digest": {
          "gitCommit": "babca52ab0c93ae16539e5923cb0d7403b9a093b",
        },
        "uri": "git+https://example-01.ghe.com/owner/repo@refs/heads/main",
      },
    ],
  },
  "runDetails": {
    "builder": {
      "id": "https://example-01.ghe.com/owner/shared/.github/workflows/build.yml@main",
    },
    "metadata": {
      "invocationId": "https://example-01.ghe.com/owner/repo/actions/runs/run-id/attempts/run-attempt",
    },
  },
}
`;

exports[`main when the default OIDC issuer is used successfully run main 1`] = `
{
  "buildDefinition": {
    "buildType": "https://actions.github.io/buildtypes/workflow/v1",
    "externalParameters": {
      "workflow": {
        "path": ".github/workflows/main.yml",
        "ref": "refs/heads/main",
        "repository": "https://github.com/owner/repo",
      },
    },
    "internalParameters": {
      "github": {
        "event_name": "push",
        "repository_id": "repo-id",
        "repository_owner_id": "owner-id",
        "runner_environment": "github-hosted",
      },
    },
    "resolvedDependencies": [
      {
        "digest": {
          "gitCommit": "babca52ab0c93ae16539e5923cb0d7403b9a093b",
        },
        "uri": "git+https://github.com/owner/repo@refs/heads/main",
      },
    ],
  },
  "runDetails": {
    "builder": {
      "id": "https://github.com/owner/shared/.github/workflows/build.yml@main",
    },
    "metadata": {
      "invocationId": "https://github.com/owner/repo/actions/runs/run-id/attempts/run-attempt",
    },
  },
}
`;
